k8s/longhorn/05_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.keindev.ru`)
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: authentik
          namespace: authentik
    - kind: Rule
      match: "Host(`longhorn.keindev.ru`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: authentik-server.authentik.svc.cluster.local
  tls:
    secretName: local-keindev-ru-tls
